styled header: fixed position at the top with a z-index

--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@ body {
     margin-top: -65px;
     width: 100%;
 }
+header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 10;
+}
 .imgDiv {
     display: inline-block;
     width: 300px;
